--- a/composetest/docker-compose.yml
+++ b/composetest/docker-compose.yml
@@ -5,5 +5,9 @@ services:
         build: .
         ports:
             - "5000:5000"
+        volumes: 
+            - .:/code
+        environment: 
+            FLASH_ENV: development
     redis:
         image: "redis:alpine"
